--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body{
+    font-family: 'Lato', sans-serif;
     display: flex;
     margin: 0;
     padding: 0;
@@ -25,8 +26,71 @@ aside h1{
     text-align: center;
     position: relative;
     color: white;
-    font-size: 250%;
+    bottom: 2%;
+    font-size: 300%;
 }
 main{
     flex: 3;
+    display: flex;
+    flex-direction: column;
 }
+main .first{
+    flex: 11;
+    background-color: #EEE;
+}
+main .second{
+    flex: 10;
+    background-color: white;
+}
+main .second h1{
+    margin-left: 45px;
+}
+main .second form .form {
+    display: flex;
+}
+main .second form .form section section{
+    margin: 10px;
+    margin-left: 50px;
+}
+main .second form .form section section label{
+    letter-spacing: 1.2px;
+    font-size: 18px;
+}
+main .second form .form section section input{
+    width: 190px;
+    height: 20px;
+    border: 1px;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: #DDD;
+    
+}
+main .second form .form section section input:focus{
+    border-color: dodgerblue;
+    outline: none;
+    box-shadow: 1px 1px 2px dodgerblue;
+}
+datalist{
+    border: none;
+}
+main .second form .form .label1 {
+    flex: 1;
+}
+main .second form .form .label2 {
+    flex: 2;
+}
+main .third{
+    flex: 11;
+    background-color: #EEE;
+}
+span{
+    margin-top: 0;
+    font-size: 10px;
+}
+.danger{
+    color: red;
+}
+.success{
+    color: green;
+}
+
