--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,21 @@ main{
     flex: 3;
     display: flex;
     flex-direction: column;
+    position: relative;
+    z-index: 2;
+    box-shadow: 10px 5px 5px black;
 }
 main .first{
     flex: 11;
     background-color: #EEE;
+}
+main .first p{
+    margin-left: 50px;
+    font-size: 24px;
+}
+
+main .first p:first-child{
+    margin-top: 15%;
 }
 main .second{
     flex: 10;
@@ -83,6 +94,31 @@ main .third{
     flex: 11;
     background-color: #EEE;
 }
+main .third button{
+    width: 180px;
+    height: 40px;
+    margin: 40px;
+    margin-bottom: 0;
+    background-color: #009933;
+    color: white;
+    font-size: 18px;
+    border: 1px solid #009933;
+    border-radius: 5px;
+    transition: ease-in-out 0.3s;
+}
+main .third button:hover{
+    background-color: white;
+    color: #009933;
+}
+main .third p {
+    margin-left: 40px;
+}
+main .third p a:any-link {
+    text-decoration: none;
+    font-weight: bold;
+    color: #009933;
+}
+
 span{
     margin-top: 0;
     font-size: 10px;
