--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,7 @@ main .third button{
     transition: ease-in-out 0.3s;
 }
 main .third button:hover{
+    cursor: pointer;
     background-color: white;
     color: #009933;
 }
